Fix support page text align span

--- a/Frontend/src/Styles/Support.css
+++ b/Frontend/src/Styles/Support.css
@@ -15,127 +15,132 @@
   border: 1px solid white;
 }
 
+.support-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
 .support-page-wrapper h2 {
   font-size: 2rem;
   font-family: Cinzel;
+  text-align: center;
 }
 
 .support-page-wrapper span {
   font-size: 1.3rem;
   font-family: Lora;
+  text-align: center;
 }
 
 @media (min-width: 600px) {
-.support-page-wrapper {
-  width: 100%;
-  height: 95vh;
-  background-color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  padding-top: 10vh;
-}
+  .support-page-wrapper {
+    width: 100%;
+    height: 95vh;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10vh;
+  }
 
-.support-form {
-  width: 80%;
-  height: 60%;
-  border: 1px solid white;
-}
+  .support-form {
+    width: 80%;
+    height: 60%;
+    border: 1px solid white;
+  }
 
-.support-info-wrapper {
-  height: 20%;
-  width: 40%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
+  .support-info-wrapper {
+    height: 20%;
+    width: 40%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 
+  .support-page-wrapper h2 {
+    font-size: 2.3rem;
+  }
 
-.support-page-wrapper h2 {
-  font-size: 2.3rem;
-}
-
-.support-page-wrapper span {
-  font-size: 1.3rem;
-}
-
-}
-
-@media (min-width: 900px) {
-.support-page-wrapper {
-  width: 100%;
-  height: 95vh;
-  background-color: black;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  align-items: center;
-  padding-top: 10vh;
-}
-
-.support-form {
-  width: 50%;
-  height: 80%;
-  border: 1px solid white;
-}
-
-.support-info-wrapper {
-  height: 30%;
-  width: 40%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.support-page-wrapper h2 {
-  font-size: 2.8rem;
-}
-
-.support-page-wrapper span {
-  font-size: 1.3rem;
-}
-
+  .support-page-wrapper span {
+    font-size: 1.3rem;
+    text-align: center;
+  }
 }
 
 @media (min-width: 900px) {
-.support-page-wrapper {
-  width: 100%;
-  height: 95vh;
-  background-color: black;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  align-items: center;
-  padding-top: 10vh;
+  .support-page-wrapper {
+    width: 100%;
+    height: 95vh;
+    background-color: black;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10vh;
+  }
+
+  .support-form {
+    width: 50%;
+    height: 80%;
+    border: 1px solid white;
+  }
+
+  .support-info-wrapper {
+    height: 30%;
+    width: 40%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .support-page-wrapper h2 {
+    font-size: 2.8rem;
+  }
+
+  .support-page-wrapper span {
+    font-size: 1.3rem;
+  }
 }
 
-.support-form {
-  width: 40%;
-  height: 80%;
-  border: 1px solid white;
-}
+@media (min-width: 900px) {
+  .support-page-wrapper {
+    width: 100%;
+    height: 95vh;
+    background-color: black;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10vh;
+  }
 
-.support-info-wrapper {
-  height: 30%;
-  width: 40%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
+  .support-form {
+    width: 40%;
+    height: 80%;
+    border: 1px solid white;
+  }
 
-.support-page-wrapper h2 {
-  font-size: 3rem;
-}
+  .support-info-wrapper {
+    height: 30%;
+    width: 40%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.support-page-wrapper span {
-  font-size: 1.5rem;
-}
+  .support-page-wrapper h2 {
+    font-size: 3rem;
+  }
 
+  .support-page-wrapper span {
+    font-size: 1.5rem;
+  }
 }
